# gitboard

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitboard/: __main__.py  api.py  auth.py  cache.py  config.py  main.py  models.py
src/gitboard/tui/: __main__.py  app.py  screens.py  styles.tcss
tests/: test_api.py  test_auth.py  test_cache.py  test_main.py
